--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <!-- 1 -->
             <div class="tempo--controller">
               <img class="powerBtn" src="img/power-button.png" alt="" />
+              <img class="powerBtnOn" src="img/power-button-on.png" alt="" />
               <div class="tempo--dail">
                 <div class="numbers--nd--nobe--container">
                   <img class="numbers" src="img/number indicatore.svg" alt="" />
@@ -51,6 +52,7 @@
               <div class="tempo--dail">
                 <div class="numbers--nd--nobe--container">
                   <img class="numbers" src="img/number indicatore.svg" alt="" />
+                  <img class="powerBtnOn" src="img/power-button-on.png" alt="" />
                   <img class="nobe" src="img/indicator pointer.png" alt="" />
                 </div>
                 <div class="tempo--increase--decrease--container">
@@ -70,6 +72,7 @@
             <!-- 3 -->
             <div class="tempo--controller">
               <img class="powerBtn" src="img/power-button.png" alt="" />
+              <img class="powerBtnOn" src="img/power-button-on.png" alt="" />
               <div class="tempo--dail">
                 <div class="numbers--nd--nobe--container">
                   <img class="numbers" src="img/number indicatore.svg" alt="" />
@@ -92,6 +95,7 @@
             <!-- 4 -->
             <div class="tempo--controller">
               <img class="powerBtn" src="img/power-button.png" alt="" />
+              <img class="powerBtnOn" src="img/power-button-on.png" alt="" />
               <div class="tempo--dail">
                 <div class="numbers--nd--nobe--container">
                   <img class="numbers" src="img/number indicatore.svg" alt="" />
